kustomize/applications/pipeline/base/patches/virtual-service-metadata-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-grpc
  namespace: kubeflow
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
