kustomize/applications/pipeline/base/patches/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-ui
  rules:
  # Allow all requests from the ingress gateway
  - from:
    - source:
        principals:
        - cluster.local/ns/ingress-kubeflow/sa/ingress-kubeflow

  # Allow all requests with an `authorization` header but NOT a `kubeflow-userid` header.
  # This is needed to allow Kubernetes JWTs to be passed to the KFP API.
  - when:
    - key: request.headers[authorization]
      values:
      - "*"
    - key: request.headers[kubeflow-userid]
      notValues:
      - "*"
